# python-webrtc

./: .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  LICENSE.md  MANIFEST.in  Makefile  README.md  README.rst  SECURITY.md  THIRD_PARTY_LICENSES.md  black.toml  pyproject.toml  requirements-dev.txt  setup.py
.github/codeql/: codeql_config.yaml  codeql_config.yml
.github/workflows/: black.yml  build.yml  build_linux_wheels.yml  build_macos_arm_wheels.yml  build_macos_wheels.yml  build_manylinux.yml  build_windows_wheels.yml  codeql-analysis.yml  codeql_analysis.yml  create_sdist.yml  pytest.yml
docs/: Makefile  requirements.txt
docs/links/: webrtc
docs/links/wrtc/: __init__.py
docs/source/: conf.py  index.rst  modules.rst  webrtc.base.rst  webrtc.functions.get_user_media.rst  webrtc.functions.rst  webrtc.interfaces.media_stream.rst  webrtc.interfaces.media_stream_track.rst  webrtc.interfaces.rst  webrtc.interfaces.rtc_audio_source.rst  webrtc.interfaces.rtc_dtls_transport.rst  webrtc.interfaces.rtc_ice_transport.rst  webrtc.interfaces.rtc_peer_connection.rst  webrtc.interfaces.rtc_rtp_receiver.rst  webrtc.interfaces.rtc_rtp_sender.rst  webrtc.interfaces.rtc_rtp_transceiver.rst  webrtc.interfaces.rtc_sctp_transport.rst  webrtc.models.rst  webrtc.models.rtc_on_data_event.rst  webrtc.models.rtc_session_description.rst  webrtc.models.rtc_session_description_init.rst  webrtc.models.rtp_encoding_parameters.rst  webrtc.models.rtp_transceiver_init.rst  webrtc.rst
docs/source/_static/css/: custom.css
examples/: README.md  telegram_group_calls.py
python-webrtc/cpp/: CMakeLists.txt
python-webrtc/cpp/src/: exceptions.cpp  exceptions.h  module.cpp  peer_connection_factory.cpp  peer_connection_factory.h  rtc_peer_connection.cpp  rtc_peer_connection.h
python-webrtc/cpp/src/enums/: enums.cpp  enums.h
python-webrtc/cpp/src/enums/python_webrtc/: rtc_ice_component.cpp  rtc_ice_component.h
python-webrtc/cpp/src/enums/webrtc/: cricket_ice_gathering_state.cpp  cricket_ice_gathering_state.h  dtls_transport_state.cpp  dtls_transport_state.h  ice_connection_state.cpp  ice_connection_state.h  ice_gathering_state.cpp  ice_gathering_state.h  media_type.cpp  media_type.h  peer_connection_state.cpp  peer_connection_state.h  rtc_ice_role.cpp  rtc_ice_role.h  rtc_ice_transport_state.cpp  rtc_ice_transport_state.h  rtp_transceiver_direction.cpp  rtp_transceiver_direction.h  sctp_transport_state.cpp  sctp_transport_state.h  sdp_type.cpp  sdp_type.h  source_state.cpp  source_state.h  track_state.cpp  track_state.h
python-webrtc/cpp/src/functions/: functions.cpp  functions.h  get_user_media.cpp
python-webrtc/cpp/src/interfaces/: create_session_description_observer.cpp  create_session_description_observer.h  interfaces.cpp  interfaces.h  media_stream.cpp  media_stream.h  media_stream_track.cpp  media_stream_track.h  peer_connection_factory.cpp  peer_connection_factory.h  rtc_audio_source.cpp  rtc_audio_source.h  rtc_audio_track_source.cpp  rtc_audio_track_source.h  rtc_dtls_transport.cpp  rtc_dtls_transport.h  rtc_ice_transport.cpp  rtc_ice_transport.h  rtc_peer_connection.cpp  rtc_peer_connection.h  rtc_rtp_receiver.cpp  rtc_rtp_receiver.h  rtc_rtp_sender.cpp  rtc_rtp_sender.h  rtc_rtp_transceiver.cpp  rtc_rtp_transceiver.h  rtc_sctp_transport.cpp  rtc_sctp_transport.h  set_session_description_observer.cpp  set_session_description_observer.h
python-webrtc/cpp/src/models/: models.cpp  models.h
python-webrtc/cpp/src/models/python_webrtc/: rtc_on_data_event.cpp  rtc_on_data_event.h  rtc_session_description.cpp  rtc_session_description.h  rtc_session_description_init.cpp  rtc_session_description_init.h
python-webrtc/cpp/src/models/webrtc/: rtp_encoding_parameters.h  rtp_transceiver_init.h
python-webrtc/cpp/src/utils/: absl_optional.h  instance_holder.h
python-webrtc/python/: .env.example  test.py  tgcalls_test.py  webrtc.py  wrtc.pyi
python-webrtc/python/webrtc/: __init__.py  base.py  rtc_peer_connection.py
python-webrtc/python/webrtc/functions/: get_user_media.py
python-webrtc/python/webrtc/interfaces/: media_stream.py  media_stream_track.py  rtc_audio_source.py  rtc_dtls_transport.py  rtc_ice_transport.py  rtc_peer_connection.py  rtc_rtp_receiver.py  rtc_rtp_sender.py  rtc_rtp_transceiver.py  rtc_sctp_transport.py
python-webrtc/python/webrtc/models/: rtc_on_data_event.py  rtc_session_description.py  rtc_session_description_init.py  rtp_encoding_parameters.py  rtp_transceiver_init.py
python-webrtc/python/webrtc/utils/: callback_to_async.py  callbacks_to_async.py  convert_exceptions.py
stubs/wrtc/: __init__.pyi
tests/: __init__.py  conftest.py  helpers.py  test_rtc_peer_connection_add_track.py
tests/rtc_peer_connection/: test_add_track.py  test_add_transceiver.py
tests/rtc_rtp_transceiver/: test_direction.py  test_stop.py
